# IQC

./: Dockerfile  README.md  env.yaml  env.yml  pyproject.toml
.github/workflows/: ci.yml  tests.yml
config_samples/: README.md  config.yaml  crux_threads_test.sh
iqc/: __init__.py  asetools.py  cli.py  main.py  mpitools.py  viztools.py
iqc/tests/: __init__.py  test_asetools.py  test_mpitools.py
notebooks/: iqc_metal_complex.ipynb
web_app/: README.md  molecule_viewer.html
xyz/: benzene.xyz  c60.xyz  ethylene.xyz  methane.xyz  water.xyz
