[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iqc"
version = "0.1.0"
description = "IQC: Interactive Quantum Chemistry"
authors = [
    {name = "Murat Keceli", email = "keceli@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "mpi4py",
    "psutil",
    "ase",
    "rdkit",
    "nglview",
    "pandas",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock",
]
dev = [
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
include = ["iqc*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["iqc/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 

[project.scripts]
iqc = "iqc.main:main"
